--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
     "css-loader": "^1.0.0",
     "dotenv": "^6.0.0",
     "env-cmd": "^8.0.2",
+    "eslint": "^5.5.0",
+    "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "react-hot-loader": "^4.3.6",
