--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,6 +1,9 @@
 {
     "presets": [
         "env",
-        "react"
+        "react",
+        "es2015",
+        "react",
+        "stage-0"
     ]
 }
