--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "prop-types": "^15.6.2",
     "react-hot-loader": "^4.3.6",
     "react-map-gl": "^3.3.4",
     "style-loader": "^0.23.0",
