--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@turf/turf": "^5.1.6",
     "axios": "^0.18.0",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^9.0.0",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
@@ -22,7 +23,7 @@
     "css-loader": "^1.0.0",
     "dotenv": "^6.0.0",
     "env-cmd": "^8.0.2",
-    "eslint": "^5.5.0",
+    "eslint": "^5.6.0",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
