--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,9 @@
     "prop-types": "^15.6.2",
     "react-hot-loader": "^4.3.6",
     "react-map-gl": "^3.3.4",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "style-loader": "^0.23.0",
     "webpack": "^4.18.0",
     "webpack-cli": "^3.1.0",
